# confspec

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
configspec/: __init__.py  loader.py
configspec/parsers/: __init__.py  abc.py  json.py  toml.py  yaml.py
confspec/: __init__.py  helpers.py  interpolate.py  loader.py
confspec/parsers/: __init__.py  abc.py  json.py  toml.py  yaml.py
tests/: test_helpers.py  test_interpolate.py  test_loader.py
tests/resources/: config.prod.toml  config.toml  config2.toml
