[project]
name = "configspec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
msgspec = [
    "msgspec>=0.19.0",
]
yaml = [
    "ruamel-yaml>=0.18.10",
]
pydantic = [
    "pydantic>=2.11.4",
]

[dependency-groups]
dev = [
    "nox>=2025.5.1",
]
